# lab-github-cicd-demo-public

./: .gitignore  AGENTS.md  README.md  example.txt  main.py  pyproject.toml
.github/: release-drafter.yml
.github/PULL_REQUEST_TEMPLATE/: bugfix_template.md  docs_template.md  feature_template.md
.github/chatmodes/: MyAgent-Simple-GPT5.chatmode.md
.github/workflows/: dispatch_test_input_print.yml  dispatch_test_print_context.yml  dispatch_test_variables_print.yml  push_test_print.yml  pyformat.yml  pylint-issue-report.yml  pylint.yml  pytest.yml  schedule.yml  schedule_test_print.yml
src/: gradio_hello.py  requirements.md
tests/: test_main.py
