[project]
name = "lab-github-cicd-demo-public"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
    "python-dotenv>=1.0.0",
    "ruff>=0.14.2",
    "sentry-sdk>=2.40.0",
]

[dependency-groups]
dev = [
    "pylint>=3.2.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
    "tests",
]
